CDN Hosted JS, Updated documentation on Getting Started and features

--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
       textArea.innerHTML = element.getAttribute("val");
     }
   </script>
+  <!-- <script src="https://unpkg.com/lannister-component@1.0.1/bundle.js"></script> -->
+  <script type = "module" src="index.js"></script>
 
-  <script type = "module" src="packages/lan-slider/src/main.js"></script>
-  <script type = "module" src="packages/lan-slider/src/style.js"></script>
-  <script type = "module" src="packages/lan-button/src/main.js"></script>
 </body>
 </html>
