--- a/test/lan-tooltip-test.html
+++ b/test/lan-tooltip-test.html
@@ -28,75 +28,75 @@
             test('Testing placement effect', function () {
                 myEl.setAttribute('visible-arrow', 'false');
                 myEl.setAttribute('placement', 'top');
-                assert.equal(myEl.getTooltip().getAttribute('class'), 'tooltip-top');
+                assert.equal(myEl.shadowRoot.querySelector('#tool').getAttribute('class'), 'tooltip-top');
                 myEl.setAttribute('placement', 'bottom');
-                assert.equal(myEl.getTooltip().getAttribute('class'), 'tooltip-bottom');
+                assert.equal(myEl.shadowRoot.querySelector('#tool').getAttribute('class'), 'tooltip-bottom');
                 myEl.setAttribute('placement', 'left');
-                assert.equal(myEl.getTooltip().getAttribute('class'), 'tooltip-left');
+                assert.equal(myEl.shadowRoot.querySelector('#tool').getAttribute('class'), 'tooltip-left');
                 myEl.setAttribute('placement', 'right');
-                assert.equal(myEl.getTooltip().getAttribute('class'), 'tooltip-right');
+                assert.equal(myEl.shadowRoot.querySelector('#tool').getAttribute('class'), 'tooltip-right');
 
                 // Test invalid inputs
                 myEl.setAttribute('placement', 'tops');
-                assert.equal(myEl.getTooltip().getAttribute('class'), 'tooltip-bottom');
+                assert.equal(myEl.shadowRoot.querySelector('#tool').getAttribute('class'), 'tooltip-bottom');
             });
             test('Testing visible arrow effect', function () {
                 myEl.setAttribute('visible-arrow', 'true');
                 myEl.setAttribute('placement', 'top');
-                assert.equal(myEl.getTooltip().getAttribute('class'), 'tooltip-top arrow-top');
+                assert.equal(myEl.shadowRoot.querySelector('#tool').getAttribute('class'), 'tooltip-top arrow-top');
                 myEl.setAttribute('placement', 'bottom');
-                assert.equal(myEl.getTooltip().getAttribute('class'), 'tooltip-bottom arrow-bottom');
+                assert.equal(myEl.shadowRoot.querySelector('#tool').getAttribute('class'), 'tooltip-bottom arrow-bottom');
                 myEl.setAttribute('placement', 'left');
-                assert.equal(myEl.getTooltip().getAttribute('class'), 'tooltip-left arrow-left');
+                assert.equal(myEl.shadowRoot.querySelector('#tool').getAttribute('class'), 'tooltip-left arrow-left');
                 myEl.setAttribute('placement', 'right');
-                assert.equal(myEl.getTooltip().getAttribute('class'), 'tooltip-right arrow-right');
+                assert.equal(myEl.shadowRoot.querySelector('#tool').getAttribute('class'), 'tooltip-right arrow-right');
 
                 // Test invalid inputs
                 myEl.setAttribute('placement', 'top');
                 myEl.setAttribute('visible-arrow', 'trues');
-                assert.equal(myEl.getTooltip().getAttribute('class'), 'tooltip-top arrow-top');
+                assert.equal(myEl.shadowRoot.querySelector('#tool').getAttribute('class'), 'tooltip-top arrow-top');
             });
             test('Testing dark effect', function () {
-                assert.equal(myEl.getTooltipText().style.backgroundColor, "black");
-                assert.equal(myEl.getTooltipText().style.color, "white");
+                assert.equal(myEl.shadowRoot.querySelector('.tooltiptext').style.backgroundColor, "black");
+                assert.equal(myEl.shadowRoot.querySelector('.tooltiptext').style.color, "white");
 
                 //Test invalid inputs
                 myEl.setAttribute('effect', 'lights')
-                assert.equal(myEl.getTooltipText().style.backgroundColor, "black");
-                assert.equal(myEl.getTooltipText().style.color, "white");
+                assert.equal(myEl.shadowRoot.querySelector('.tooltiptext').style.backgroundColor, "black");
+                assert.equal(myEl.shadowRoot.querySelector('.tooltiptext').style.color, "white");
             });
             test('Testing light effect', function () {
                 myEl.setAttribute('effect', 'light')
-                assert.equal(myEl.getTooltipText().style.color, "black");
-                assert.equal(myEl.getTooltipText().style.backgroundColor, "white");
+                assert.equal(myEl.shadowRoot.querySelector('.tooltiptext').style.color, "black");
+                assert.equal(myEl.shadowRoot.querySelector('.tooltiptext').style.backgroundColor, "white");
             });
             test('Testing click effect', function () {
                 myEl.setAttribute("event", "click");
-                myEl.getTooltip().click();
-                assert.equal(myEl.getTooltipText().style.visibility, "visible");
-                myEl.getTooltip().click();
-                assert.equal(myEl.getTooltipText().style.visibility, "hidden");
+                myEl.shadowRoot.querySelector('#tool').click();
+                assert.equal(myEl.shadowRoot.querySelector('.tooltiptext').style.visibility, "visible");
+                myEl.shadowRoot.querySelector('#tool').click();
+                assert.equal(myEl.shadowRoot.querySelector('.tooltiptext').style.visibility, "hidden");
             });
             test('Testing transition delay effects', function () {
                 myEl.setAttribute("event", "click");
                 myEl.setAttribute("hide-after", "3000");
                 myEl.setAttribute("open-delay", "2000");
-                myEl.getTooltip().click();
-                assert.equal(myEl.getTooltipText().style.transition, "opacity 2s linear 0s");
-                myEl.getTooltip().click();
-                assert.equal(myEl.getTooltipText().style.transition, "visibility 3s ease 0s, opacity 3s linear 0s");
+                myEl.shadowRoot.querySelector('#tool').click();
+                assert.equal(myEl.shadowRoot.querySelector('.tooltiptext').style.transition, "opacity 2s linear 0s");
+                myEl.shadowRoot.querySelector('#tool').click();
+                assert.equal(myEl.shadowRoot.querySelector('.tooltiptext').style.transition, "visibility 3s ease 0s, opacity 3s linear 0s");
 
                 // Test invalid inputs
                 myEl.setAttribute("hide-after", "-1");
                 myEl.setAttribute("open-delay", "-1");
-                myEl.getTooltip().click();
-                assert.equal(myEl.getTooltipText().style.transition, "opacity 0s linear 0s");
-                myEl.getTooltip().click();
-                assert.equal(myEl.getTooltipText().style.transition, "visibility 0s ease 0s, opacity 0s linear 0s");
+                myEl.shadowRoot.querySelector('#tool').click();
+                assert.equal(myEl.shadowRoot.querySelector('.tooltiptext').style.transition, "opacity 0s linear 0s");
+                myEl.shadowRoot.querySelector('#tool').click();
+                assert.equal(myEl.shadowRoot.querySelector('.tooltiptext').style.transition, "visibility 0s ease 0s, opacity 0s linear 0s");
             });
             test('Testing tooltip content', function () {
                 myEl.setAttribute("content", "hello world");
-                assert.equal(myEl.getTooltipText().innerHTML, "hello world");
+                assert.equal(myEl.shadowRoot.querySelector('.tooltiptext').innerHTML, "hello world");
             });
         });
     </script>
