--- a/packages/lan-button/src/index.html
+++ b/packages/lan-button/src/index.html
@@ -4,8 +4,9 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>lan-slider example</title>
+    <title>lan-button example</title>
     <script src="main.js" type="module" defer></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> 
 </head>
 
 <body>
@@ -48,8 +49,15 @@
         <lan-button type="warning" disabled>Warning</lan-button>
         <lan-button type="danger" disabled>Danger</lan-button>
     </div>
+    <br>
     <div>
-        <lan-button class="btn btn-dark btn-block">Bootstrap Button</lan-button>
+        <button class="btn btn-primary">Twitter Boostrap Button</button>
+    </div>
+    <br>
+    <div>
+        <lan-button bootstrap className="btn btn-primary">
+            LAN Bootstrap Button
+        </lan-button>
     </div>
 </body>
 
