Bootstrapped card component

--- a/packages/lan-card/src/index.html
+++ b/packages/lan-card/src/index.html
@@ -19,6 +19,8 @@
         margin: 10px;
       }
     </style>
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
@@ -39,6 +41,9 @@
     </lan-card>
     <lan-card header="Unidentified shadow type, treat as 'always'" body-style="{ text-decoration: underline }" shadow="random">
       Underlined body text
+    </lan-card>
+    <lan-card bootstrap header="Bootstrap Card">
+      What an awesome component!!
     </lan-card>
   </div>
 </body>
