--- a/packages/lan-button/src/index.html
+++ b/packages/lan-button/src/index.html
@@ -17,7 +17,7 @@
         <lan-button type="success">Success</lan-button>
         <lan-button type="info">Info</lan-button>
         <lan-button type="warning">Warning</lan-button>
-        <lan-button type="danger">Primary</lan-button>
+        <lan-button type="danger">Danger</lan-button>
     </div>
     <div>
         <lan-button plain>Plain</lan-button>
@@ -25,7 +25,7 @@
         <lan-button type="success" plain>Success</lan-button>
         <lan-button type="info" plain>Info</lan-button>
         <lan-button type="warning" plain>Warning</lan-button>
-        <lan-button type="danger" plain>Primary</lan-button>
+        <lan-button type="danger" plain>Danger</lan-button>
     </div>
     <div>
         <lan-button round>Round</lan-button>
@@ -33,7 +33,7 @@
         <lan-button type="success" round>Success</lan-button>
         <lan-button type="info" round>Info</lan-button>
         <lan-button type="warning" round>Warning</lan-button>
-        <lan-button type="danger" round>Primary</lan-button>
+        <lan-button type="danger" round>Danger</lan-button>
     </div>
     <div>
         <lan-button>Default</lan-button>
