added unit tests

--- a/test/lan-slider-test.html
+++ b/test/lan-slider-test.html
@@ -54,24 +54,12 @@
         assert.equal(myEl.getAttribute('max'), '100');
         assert.equal(myEl.getAttribute('val'), '50');
       });
-      test('On mouse out', function() {
-        myEl.shadowRoot.querySelector('#thumb').dispatchEvent(new MouseEvent('mouseout'));
-        assert.equal(myEl.shadowRoot.querySelector("#thumb").style.left, '50%');
-        assert.equal(myEl.shadowRoot.querySelector("#prebar").style.width, '50%');
-        assert.equal(myEl.shadowRoot.querySelector("#tooltip").style.opacity, '0');
-      });
-      test('On hover', function() {
-        myEl.shadowRoot.querySelector('#thumb').dispatchEvent(new MouseEvent('mouseover'));
-        assert.equal(myEl.shadowRoot.querySelector("#thumb").style.left, '50%');
-        assert.equal(myEl.shadowRoot.querySelector("#prebar").style.width, '50%');
-        assert.equal(myEl.shadowRoot.querySelector("#tooltip").style.opacity, '1');
-      });
-      test('On drag, within bound', function() {
+      test('Track on mousedown', function() {
         var trackWidth = myEl.shadowRoot.querySelector("#track").offsetWidth;
         var offset = 10;
         var mockClientX = 0.5 * trackWidth + offset;
 
-        myEl.shadowRoot.querySelector('#thumb').dispatchEvent(new MouseEvent('drag', { clientX: mockClientX }));
+        myEl.shadowRoot.querySelector('#track').dispatchEvent(new MouseEvent('mousedown', { clientX: mockClientX }));
         var spySetAttr = sinon.spy(myEl, 'setAttribute');
 
         expect(spySetAttr.calledWith(50));
@@ -80,13 +68,46 @@
         assert.equal(myEl.val, 50);
         expect(myEl.position >= 0 && myEl.position <= 100);
       });
-      test('On drag, beyond bound', function() {
-        myEl.shadowRoot.querySelector('#thumb').dispatchEvent(new MouseEvent('drag', { clientX: 0 }));
+      test('Thumb on mouse out', function() {
+        myEl.shadowRoot.querySelector('#thumb').dispatchEvent(new MouseEvent('mouseout'));
+        assert.equal(myEl.shadowRoot.querySelector("#thumb").style.left, '50%');
+        assert.equal(myEl.shadowRoot.querySelector("#prebar").style.width, '50%');
+        assert.equal(myEl.shadowRoot.querySelector("#tooltip").style.opacity, '0');
+      });
+      test('Thumb on hover', function() {
+        myEl.shadowRoot.querySelector('#thumb').dispatchEvent(new MouseEvent('mouseover'));
+        assert.equal(myEl.shadowRoot.querySelector("#thumb").style.left, '50%');
+        assert.equal(myEl.shadowRoot.querySelector("#prebar").style.width, '50%');
+        assert.equal(myEl.shadowRoot.querySelector("#tooltip").style.opacity, '1');
+      });
+      test('Thumb on drag, within bound', function() {
+        var trackWidth = myEl.shadowRoot.querySelector("#track").offsetWidth;
+        var offset = 10;
+        var mockClientX = 0.5 * trackWidth + offset;
+
+        myEl.shadowRoot.querySelector('#thumb').dispatchEvent(new DragEvent('drag', { clientX: mockClientX }));
+        var spySetAttr = sinon.spy(myEl, 'setAttribute');
+
+        expect(spySetAttr.calledWith(50));
+        assert.equal(myEl.shadowRoot.querySelector("#thumb").style.left, '50%');
+        assert.equal(myEl.shadowRoot.querySelector("#prebar").style.width, '50%');
+        assert.equal(myEl.val, 50);
+        expect(myEl.position >= 0 && myEl.position <= 100);
+      });
+      test('Thumb on drag, beyond bound', function() {
+        myEl.shadowRoot.querySelector('#thumb').dispatchEvent(new DragEvent('drag', { clientX: 0 }));
         var spySetAttr = sinon.spy(myEl, 'setAttribute');
         expect(spySetAttr.notCalled);
       });
-      test('On drag end', function() {
-        myEl.shadowRoot.querySelector('#thumb').dispatchEvent(new MouseEvent('dragend'));
+      test('Thumb on drag start', function() {
+        var eventInit = { dataTransfer: new DataTransfer() };
+        var dragEvent = new DragEvent('dragstart', eventInit);
+        var spy = sinon.spy(eventInit.dataTransfer, 'setDragImage');
+        myEl.shadowRoot.querySelector('#thumb').dispatchEvent(dragEvent);
+        expect(spy.called);
+      });
+      test('Thumb on drag end', function() {
+        myEl.shadowRoot.querySelector('#thumb').dispatchEvent(new DragEvent('dragend'));
         assert.equal(myEl.shadowRoot.querySelector("#thumb").style.left, '50%');
         assert.equal(myEl.shadowRoot.querySelector("#prebar").style.width, '50%');
       });
