Made a bunch of changes to styling
Also made changes to logic behind placeholder and added some commented code about observedAttributes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!--
     <button class="button danger">Danger</button>
   -->
-  <input type="button" class="button danger" value="Danger" onclick="alert('YO!!!')">
+  <lan-button type="danger" onclick="alert('YO!!!')">Alert User</lan-button>
 
   <textarea id="text-area"></textarea>
 
